refactor: move backend to api folder
